syntax = "proto3";

option java_package = "org.pipelineframework.csv.grpc";

import "input_csv_file_processing_svc.proto";

message SendPaymentRequest {
  string msisdn = 1;
  string amount = 2;
  string currency = 3;
  string reference = 4;
  string url = 5;
  string paymentRecordId = 6;
  PaymentRecord paymentRecord = 7;
}

message AckPaymentSent {
  string id = 1; // from BaseEntity
  string conversationId = 2;
  int64  status = 3; // Long
  string message = 4;
  string paymentRecordId = 5;
  PaymentRecord paymentRecord = 6;
}

message PaymentStatus {
  string id = 1; // from BaseEntity
  string reference = 2;
  string status = 3;
  string message = 4;
  string fee = 5; // BigDecimal
  string ackPaymentSentId = 6;
  AckPaymentSent ackPaymentSent = 7;
}

service PaymentProviderService {
  rpc sendPayment(SendPaymentRequest) returns (AckPaymentSent);
  rpc getPaymentStatus(AckPaymentSent) returns(PaymentStatus);
}

service ProcessSendPaymentRecordReactiveService {
  rpc remoteProcess(PaymentRecord) returns (AckPaymentSent);
}

service ProcessAckPaymentSentReactiveService {
  rpc remoteProcess(AckPaymentSent) returns (PaymentStatus);
}

service PollAckPaymentSentService {
  rpc remoteProcess(AckPaymentSent) returns (PaymentStatus);
}

service ObservePersistenceAckPaymentSentSideEffectService {
  rpc remoteProcess(AckPaymentSent) returns (AckPaymentSent);
}

service ObservePersistencePaymentStatusSideEffectService {
  rpc remoteProcess(PaymentStatus) returns (PaymentStatus);
}
